# comps_extraction

./: .gitignore  README.md  data_extraction.ipynb  pyproject.toml
data/: data.xlsx  data_cleaned.csv  data_final.csv  luxury_companies.csv  second_approach_final_results.csv
