[tool.poetry]
name = "data-and-ai-regulation"
version = "0.1.0"
description = "Extracting comps"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
scipy = "1.13.0"
pandas = "^2.1"
matplotlib = "^3.8"
scikit-learn = "^1.3"
gensim = "^4.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
